--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,9 @@
 				"kind": "build",
 				"isDefault": true,
 			},
+			"presentation": {
+				"clear": true,
+			},
 			"isBuildCommand": true,
 			"problemMatcher": "$gcc",
 			"command": "python",
